--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -10,7 +10,7 @@ def all_pods
 #  use_modular_headers!
   use_frameworks!
   # 网络层
-  pod 'AFNetworking', '~> 4.0.1'
+  pod 'AFNetworking', '4.0.1'
   # 布局
   pod 'Masonry', '~> 1.1.0'
   pod 'HWPanModal', '~> 0.8.9'
@@ -36,9 +36,9 @@ def all_pods
   #滚动视图
   pod 'JXCategoryView'
   # 火山美颜
-  pod 'BytedEffect', :path => 'bytedEffect.podspec'
+#  pod 'BytedEffect', :path => 'bytedEffect.podspec'
   # 商汤美颜
-#  pod 'SenseLib', :path => 'sense.podspec'
+  pod 'SenseLib', :path => 'sense.podspec'
   
   
 #  pod 'AgoraRtcEngine_iOS', '~> 4.0.1'
@@ -63,7 +63,7 @@ pod 'AgoraRtcEngine_iOS', :path => './libs'
 #  pod 'Fastboard'
   pod 'Agora-Scene-Utils', '~> 1.1.0'
   
-  pod 'AgoraSyncManager', '1.1.3'
+  pod 'AgoraSyncManager', '1.1.4'
   
   
   #歌词组件
