--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -48,7 +48,7 @@ ext {
             gson              : 'com.google.code.gson:gson:2.9.0',
             autosize          : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
-            rtc               : 'io.agora.rtc:agora-special-full:4.0.1.4',
+            rtc               : 'io.agora.rtc:full-sdk:4.1.1',
             rtc_special_voice : 'io.agora.rtc:agora-special-voice:4.0.1.4',
             rtc_screen_sharing: 'io.agora.rtc:full-screen-sharing:4.0.1.4',
             rtm               : 'com.github.agorabuilder:rtm-sdk:1.4.10',
