--- a/iOS/ExportOptions_app-store.plist
+++ b/iOS/ExportOptions_app-store.plist
@@ -13,7 +13,7 @@
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>YS397FG5PA</string>
+	<string>GM72UGLGZW</string>
 	<key>uploadSymbols</key>
 	<true/>
 </dict>
