--- a/iOS/ExportOptions_development.plist
+++ b/iOS/ExportOptions_development.plist
@@ -13,7 +13,7 @@
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>GM72UGLGZW</string>
+	<string>YS397FG5PA</string>
 	<key>thinning</key>
 	<string>&lt;none&gt;</string>
 </dict>
