--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -17,11 +17,19 @@ android {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
-        buildConfigField "String", "SERVER_HOST", "\"${SERVER_HOST}\""
-        buildConfigField "String", "AGORA_APP_ID", "\"${AGORA_APP_ID}\""
-        buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${AGORA_APP_CERTIFICATE}\""
+
         buildConfigField "String", "APP_VERSION_NAME", "\"${APP_VERSION_NAME}\""
         buildConfigField "String", "APP_VERSION_CODE", "\"${APP_VERSION_CODE}\""
+
+        buildConfigField "String", "SERVER_HOST", "\"${SERVER_HOST}\""
+        buildConfigField "String", "TOOLBOX_SERVER_HOST", "\"${TOOLBOX_SERVER_HOST}\""
+
+        buildConfigField "String", "AGORA_APP_ID", "\"${AGORA_APP_ID}\""
+        buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${AGORA_APP_CERTIFICATE}\""
+
+        buildConfigField "String", "IM_APP_KEY", "\"${IM_APP_KEY}\""
+        buildConfigField "String", "IM_APP_CLIENT_ID", "\"${IM_APP_CLIENT_ID}\""
+        buildConfigField "String", "IM_APP_CLIENT_SECRET", "\"${IM_APP_CLIENT_SECRET}\""
     }
 
     buildTypes {
