--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -17,16 +17,22 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
-#========== 功能配置项 ========
-#服务器地址
-SERVER_HOST=https://gateway-fulldemo-staging.agoralab.co
-#rtc rtm SDK app_id
-AGORA_APP_ID=
-#rtc rtm SDK app_certifate
-AGORA_APP_CERTIFICATE=
 #应用版本code
 APP_VERSION_CODE=4
 #应用版本名称
-APP_VERSION_NAME=2.0.0
+APP_VERSION_NAME=2.0.0-voice
 
+#----------- Server Host Config --------------
+#服务器地址
+SERVER_HOST=https://gateway-fulldemo-staging.agoralab.co
+TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
+
+#----------- 授权 key 配置项 -----------
+# RTM RTC SDK key Config
+AGORA_APP_ID=
+AGORA_APP_CERTIFICATE=
+
+# IM Key Config
+IM_APP_KEY=
+IM_APP_CLIENT_ID=
+IM_APP_CLIENT_SECRET=
