[FIX] agora app key readme

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -32,7 +32,7 @@ TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
 AGORA_APP_ID=
 AGORA_APP_CERTIFICATE=
 
-# IM Key Config
+# IM Key Config （语聊房场景需要，其他场景不需要）
 IM_APP_KEY=
 IM_APP_CLIENT_ID=
 IM_APP_CLIENT_SECRET=
