--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -28,7 +28,7 @@ android {
         buildConfigField "String", "TOOLBOX_SERVER_HOST", "\"${TOOLBOX_SERVER_HOST}\""
 
         if (agoraAppID.isEmpty() || agoraAppCertificate.isEmpty()) {
-            throw new GradleException("请在 gradle.properties 中配置完整的key")
+            throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
         }
         buildConfigField "String", "AGORA_APP_ID", "\"${agoraAppID}\""
         buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${agoraAppCertificate}\""
