--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -4,8 +4,21 @@ plugins {
     id 'kotlin-kapt'
 }
 
-final def agoraAppID = project.property("AGORA_APP_ID").toString()
-final def agoraAppCertificate = project.property("AGORA_APP_CERTIFICATE").toString()
+if (project.property("AGORA_APP_ID").toString().isEmpty() ||
+        project.property("AGORA_APP_CERTIFICATE").toString().isEmpty()) {
+    throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
+}
+
+def versionCtrl = new File(rootProject.projectDir.absolutePath + File.separator + "versionCtrl.properties")
+def properties = new Properties()
+if (versionCtrl.exists()) {
+    versionCtrl.withReader('UTF-8') { reader ->
+        properties.load(reader)
+    }
+}
+final def VERSION_SCENE_VOICE = properties.getProperty("VERSION_SCENE_VOICE")
+final def VERSION_SCENE_SPATIAL_VOICE = properties.getProperty("VERSION_SCENE_SPATIAL_VOICE")
+final def VERSION_SCENE_KTV = properties.getProperty("VERSION_SCENE_KTV")
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -23,15 +36,15 @@ android {
 
         buildConfigField "String", "APP_VERSION_NAME", "\"${APP_VERSION_NAME}\""
         buildConfigField "String", "APP_VERSION_CODE", "\"${APP_VERSION_CODE}\""
+        buildConfigField "String", "VERSION_SCENE_VOICE", "\"${VERSION_SCENE_VOICE}\""
+        buildConfigField "String", "VERSION_SCENE_SPATIAL_VOICE", "\"${VERSION_SCENE_SPATIAL_VOICE}\""
+        buildConfigField "String", "VERSION_SCENE_KTV", "\"${VERSION_SCENE_KTV}\""
 
         buildConfigField "String", "SERVER_HOST", "\"${SERVER_HOST}\""
         buildConfigField "String", "TOOLBOX_SERVER_HOST", "\"${TOOLBOX_SERVER_HOST}\""
 
-        if (agoraAppID.isEmpty() || agoraAppCertificate.isEmpty()) {
-            throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
-        }
-        buildConfigField "String", "AGORA_APP_ID", "\"${agoraAppID}\""
-        buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${agoraAppCertificate}\""
+        buildConfigField "String", "AGORA_APP_ID", "\"${AGORA_APP_ID}\""
+        buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${AGORA_APP_CERTIFICATE}\""
 
         buildConfigField "String", "IM_APP_KEY", "\"${IM_APP_KEY}\""
         buildConfigField "String", "IM_APP_CLIENT_ID", "\"${IM_APP_CLIENT_ID}\""
