--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -12,14 +12,33 @@ dependencyResolutionManagement {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
     }
 }
+def versionCtrl = new File(rootProject.projectDir.absolutePath + File.separator + "versionCtrl.properties")
+def properties = new Properties()
+if (versionCtrl.exists()) {
+    versionCtrl.withReader('UTF-8') { reader ->
+        properties.load(reader)
+    }
+}
+
+final def isVoiceEmpty = properties.getProperty("VERSION_SCENE_VOICE").isEmpty()
+final def isSpatialVoiceEmpty = properties.getProperty("VERSION_SCENE_SPATIAL_VOICE").isEmpty()
+final def isKTVEmpty = properties.getProperty("VERSION_SCENE_KTV").isEmpty()
+
 rootProject.name = "AgoraEntFullDemo"
 include ':app'
 include ':common:base'
 include ':common:ui-widget'
-//include ':scenes:ktv'
 
-include ':scenes:voice'
-include ':scenes:voice:common'
+if (!isKTVEmpty) {
+    include ':scenes:ktv'
+}
 
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
+if (!isVoiceEmpty) {
+    include ':scenes:voice'
+    include ':scenes:voice:common'
+}
+
+if (!isSpatialVoiceEmpty) {
+    include ':scenes:voice_spatial'
+    include ':scenes:voice_spatial:common'
+}
