[FIX] CI lint error

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -5,6 +5,10 @@ android {
     defaultConfig {
         applicationId "io.agora.chatroom"
     }
+
+    lintOptions {
+        disable "Instantiatable"
+    }
 }
 
 dependencies {
