--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation rootProject.ext.deps.header_classics
 
     implementation rootProject.ext.deps.gson
+    implementation rootProject.ext.deps.bugly
 }
