--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -5,22 +5,21 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-#应用版本code
+# application build version code
 APP_VERSION_CODE=4
-#应用版本名称
+# application version name
 APP_VERSION_NAME=2.1.0-voice
 
 #----------- Server Host Config --------------
-#服务器地址
 SERVER_HOST=https://gateway-fulldemo.agoralab.co/
 TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
 
-#----------- 授权 key 配置项 -----------
+#----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
 AGORA_APP_ID=
 AGORA_APP_CERTIFICATE=
 
-# IM Key Config （语聊房场景需要，其他场景不需要）
+# IM Key Config (only necessary in scene 'voice chat room')
 IM_APP_KEY=
 IM_APP_CLIENT_ID=
 IM_APP_CLIENT_SECRET=
