--- a/iOS/ExportOptions_development.plist
+++ b/iOS/ExportOptions_development.plist
@@ -8,6 +8,13 @@
 	<string>export</string>
 	<key>method</key>
 	<string>development</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>io.agora.test.enfull</key>
+		<string>apiexamples_all</string>
+	</dict>
+	<key>signingCertificate</key>
+	<string>E40A63338EDCCBA764C8E0FC2D2184973746F22E</string>
 	<key>signingStyle</key>
 	<string>manual</string>
 	<key>stripSwiftSymbols</key>
