--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -1,7 +1,6 @@
 # Project-wide Gradle settings.
-
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-
+android.injected.testOnly=false
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
