--- a/Android/versionCtrl.properties
+++ b/Android/versionCtrl.properties
@@ -1,5 +1,5 @@
 
-VERSION_APP_SDK=4.1.1
-VERSION_SCENE_VOICE=YL-2.1.0
-VERSION_SCENE_SPATIAL_VOICE=YLSA-2.1.0
+VERSION_SCENE_VOICE=2.1.0
+VERSION_SCENE_SPATIAL_VOICE=2.1.0
 VERSION_SCENE_KTV=
+VERSION_SCENE_SHOW=
