--- a/Android/versionCtrl.properties
+++ b/Android/versionCtrl.properties
@@ -1,5 +1,5 @@
 
 VERSION_SCENE_VOICE=2.1.0
 VERSION_SCENE_SPATIAL_VOICE=2.1.0
-VERSION_SCENE_KTV=
-VERSION_SCENE_SHOW=
+VERSION_SCENE_KTV=2.1.1
+VERSION_SCENE_SHOW=1.1.1
