--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -7,7 +7,7 @@ android.enableJetifier=true
 # application build version code
 APP_VERSION_CODE=4
 # application version name
-APP_VERSION_NAME=2.1.0-voice
+APP_VERSION_NAME=2.1.0
 
 #----------- Server Host Config --------------
 SERVER_HOST=https://gateway-fulldemo.agoralab.co/
