--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -2,8 +2,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '12.0'
 inhibit_all_warnings!
-plugin 'cocoapods-pod-sign'
-skip_pod_bundle_sign # 用来跳过Xcode对bundle资源的签名
+#plugin 'cocoapods-pod-sign'
+#skip_pod_bundle_sign # 用来跳过Xcode对bundle资源的签名
 
 def all_pods
   
