--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -22,3 +22,7 @@ AGORA_APP_CERTIFICATE=
 IM_APP_KEY=
 IM_APP_CLIENT_ID=
 IM_APP_CLIENT_SECRET=
+
+# Cloud Player Config
+CLOUD_PLAYER_KEY=
+CLOUD_PLAYER_SECRET=
