--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -30,7 +30,7 @@ def all_pods
   
 #  pod 'AgoraRtcEngine_iOS', '~> 4.0.1'
 #pod 'AgoraRtcEngine_iOS', '4.0.0-rc.1'
-pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133.1'
+pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133.2'
 #  pod 'AgoraRtcEngine_iOS', :path => './libs'
 
   #ThirdParty
@@ -40,7 +40,7 @@ pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133.1'
   pod 'Agora-Scene-Utils', '1.0.9'
   
   #歌词组件
-  pod "ScoreEffectUI"
+  pod "ScoreEffectUI", '1.0.1'
   pod 'AgoraLyricsScore', '1.1.1-beta-3'
 #  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :commit => 'cc0951f11f5fa6113ec2b9df2a509efa881d5bd7'
 #  pod 'AgoraLyricsScore', :path => '../../AgoraLyricsScore/AgoraLyricsScore.podspec'
