[Android]add report

--- a/Android/scenes/voice_spatial/build.gradle
+++ b/Android/scenes/voice_spatial/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(":common:base")
+    implementation project(':common:ui-widget')
     implementation project(':scenes:voice:common')
 
     kapt rootProject.ext.deps.arouter_kapt
