--- a/Android/scenes/voice/build.gradle
+++ b/Android/scenes/voice/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     implementation project(":common:base")
+    implementation project(':common:ui-widget')
     implementation project(':scenes:voice:common')
 
 
