Feat/scene/all android 3.0.0 zw (#526)
* [Android]adapter to rtc sdk 4.1.1.4 version

* [Android]add report

* [Android] hide mine page version

* [Android] add yl、ylkj、show the permission leak logic

--- a/Android/scenes/voice_spatial/build.gradle
+++ b/Android/scenes/voice_spatial/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(":common:base")
+    implementation project(':common:ui-widget')
     implementation project(':scenes:voice:common')
 
     kapt rootProject.ext.deps.arouter_kapt
@@ -52,7 +53,6 @@ dependencies {
 
     implementation rootProject.ext.deps.bugly
     implementation rootProject.ext.deps.gson
-    implementation rootProject.ext.deps.easypermissions
     implementation rootProject.ext.deps.syncManager
     implementation rootProject.ext.deps.svga_player
     implementation rootProject.ext.deps.agora_chat
