--- a/Android/scenes/voice/build.gradle
+++ b/Android/scenes/voice/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     implementation project(":common:base")
+    implementation project(':common:ui-widget')
     implementation project(':scenes:voice:common')
 
 
@@ -52,7 +53,6 @@ dependencies {
 
     implementation rootProject.ext.deps.bugly
     implementation rootProject.ext.deps.gson
-    implementation rootProject.ext.deps.easypermissions
     implementation rootProject.ext.deps.syncManager
     implementation rootProject.ext.deps.svga_player
     implementation rootProject.ext.deps.agora_chat
