--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -4,11 +4,15 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 android {
     defaultConfig {
         applicationId "io.agora.entfull"
-        ndk.abiFilters 'arm64-v8a' // 'armeabi-v7a'//, 'arm64-v8a'//, 'x86', 'x86-64'
+        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a'//, 'arm64-v8a'//, 'x86', 'x86-64'
     }
 
     packagingOptions {
         pickFirst 'lib/*/libc++_shared.so'
+    }
+
+    lint {
+        baseline = file("lint-baseline.xml")
     }
 }
 
