[Fix][Android] port activity FT-445

--- a/Android/scenes/show/src/main/AndroidManifest.xml
+++ b/Android/scenes/show/src/main/AndroidManifest.xml
@@ -18,17 +18,17 @@
         <activity
             android:name=".RoomListActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="behind" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".LivePrepareActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="behind" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".LiveDetailActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="behind"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
 
     </application>
