--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -63,6 +63,7 @@ ext {
             bugly              : 'com.tencent.bugly:crashreport:4.0.4',
             svga_player        : 'com.github.yyued:SVGAPlayer-Android:2.6.1',
             agora_chat         : 'io.agora.rtc:chat-sdk:1.1.0',
+            ok2curl            : 'com.github.mrmike:ok2curl:0.8.0',
     ]
     android = [
             compileSdkVersion: 31,
