--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,7 +38,7 @@ def all_pods
   
   pod 'AgoraSyncManager', '2.0.5'
 
-   pod 'AgoraRtcEngine_iOS', :path => './libs'
+  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
  # pod 'AgoraRtcEngine_Special_iOS', '4.1.1.5'
@@ -86,12 +86,31 @@ target 'AgoraEntScenarios' do
   all_pods
 end
 
+#post_install do |installer|
+#  installer.pods_project.targets.each do |target|
+#    target.build_configurations.each do |config|
+#      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+#    end
+#  end
+#end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+      shell_script_path = "Pods/Target Support Files/#{target.name}/#{target.name}-frameworks.sh"
+      if File::exists?(shell_script_path)
+        shell_script_input_lines = File.readlines(shell_script_path)
+        shell_script_output_lines = shell_script_input_lines.map { |line| line.sub("source=\"$(readlink \"${source}\")\"", "source=\"$(readlink -f \"${source}\")\"") }
+        File.open(shell_script_path, 'w') do |f|
+          shell_script_output_lines.each do |line|
+            f.write line
+          end
+        end
+      end
     end
   end
 end
+
 
 system("./libs/setup_podspec.sh")
