update syncmanager version

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -36,7 +36,7 @@ def all_pods
   # 商汤美颜
   pod 'SenseLib', :path => 'sense.podspec'
   
-  pod 'AgoraSyncManager', '2.0.5'
+  pod 'AgoraSyncManager', '~> 2.0.7'
 
   pod 'sdk', :path => 'sdk.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
