--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
     <application
         android:name="io.agora.scene.base.component.AgoraApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/app_ic_launcher"
+        android:icon="@mipmap/app_ic_launcher_singbattlegame"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security_config"
-        android:roundIcon="@mipmap/app_ic_launcher_round"
+        android:roundIcon="@mipmap/app_ic_launcher_singbattlegame"
         android:supportsRtl="true"
         android:theme="@style/app_Theme.AgoraKTV">
 
