--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,10 +38,10 @@ def all_pods
   
   pod 'AgoraSyncManager', '~> 2.0.7'
 
-#  pod 'sdk', :path => 'sdk.podspec'
+  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
-  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.5'
+#  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.5'
 
 
   #ThirdParty
@@ -85,14 +85,6 @@ end
 target 'AgoraEntScenarios' do
   all_pods
 end
-
-#post_install do |installer|
-#  installer.pods_project.targets.each do |target|
-#    target.build_configurations.each do |config|
-#      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
-#    end
-#  end
-#end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
