--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -14,6 +14,10 @@ android {
     lint {
         baseline = file("lint-baseline.xml")
     }
+
+    lintOptions {
+        disable "Instantiatable"
+    }
 }
 
 dependencies {
