--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -37,12 +37,12 @@ def all_pods
   pod 'SenseLib', :path => 'sense.podspec'
   
   pod 'AgoraSyncManager', '~> 2.0.7'
-
-#  pod 'sdk', :path => 'sdk.podspec'
+  pod 'KTVApi', '1.0.0.1'
+  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'sdk', :path => 'sdk.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
-  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.8'
+#  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.8'
 
 
   #ThirdParty
