update sdk to 4.1.1.10

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -15,15 +15,15 @@ TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
 
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
-AGORA_APP_ID=72d8d5c7b38445e5bb26f1f270ee4649
-AGORA_APP_CERTIFICATE=d8f9f6762e494fcfaa8bed63de726ffb
+AGORA_APP_ID=
+AGORA_APP_CERTIFICATE=
 
 # IM Key Config (only necessary in scene 'voice chat room')
-IM_APP_KEY=81399972#1019272
-IM_APP_CLIENT_ID=YXA6tczxcixPTCqT1sN1hSBU1g
-IM_APP_CLIENT_SECRET=YXA6-wvmWSubEWga1En1YdxdrL1ktKY
+IM_APP_KEY=
+IM_APP_CLIENT_ID=
+IM_APP_CLIENT_SECRET=
 
 # Cloud Player Config
-CLOUD_PLAYER_KEY=d2f2287d4c2a46fa82b0b4476cc81ad4
-CLOUD_PLAYER_SECRET=a2d14d1163674460a139839a4d48bd12
+CLOUD_PLAYER_KEY=
+CLOUD_PLAYER_SECRET=
 
