update sdk to 4.1.1.10

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -15,15 +15,15 @@ TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
 
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
-AGORA_APP_ID=*****************************
-AGORA_APP_CERTIFICATE=*****************************
+AGORA_APP_ID=
+AGORA_APP_CERTIFICATE=
 
 # IM Key Config (only necessary in scene 'voice chat room')
-IM_APP_KEY=81399972#1019272
-IM_APP_CLIENT_ID=YXA6tczxcixPTCqT1sN1hSBU1g
-IM_APP_CLIENT_SECRET=****************************
+IM_APP_KEY=
+IM_APP_CLIENT_ID=
+IM_APP_CLIENT_SECRET=
 
 # Cloud Player Config
-CLOUD_PLAYER_KEY=*****************************
-CLOUD_PLAYER_SECRET=*****************************
+CLOUD_PLAYER_KEY=
+CLOUD_PLAYER_SECRET=
 
