--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,11 +38,10 @@ def all_pods
   
   pod 'AgoraSyncManager', '2.0.5'
 
-   pod 'AgoraRtcEngine_iOS', :path => './libs'
+#   pod 'AgoraRtcEngine_iOS', :path => './libs'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
-#  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.5'
-
+  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.142'
 
   #ThirdParty
   pod 'HWWeakTimer', '1.0'
