--- a/Android/versionCtrl.properties
+++ b/Android/versionCtrl.properties
@@ -1,5 +1,5 @@
 
-VERSION_SCENE_VOICE=2.1.0
-VERSION_SCENE_SPATIAL_VOICE=2.1.0
-VERSION_SCENE_KTV=2.3.0
-VERSION_SCENE_SHOW=2.4.0
+VERSION_SCENE_VOICE=3.1.0
+VERSION_SCENE_SPATIAL_VOICE=3.1.0
+VERSION_SCENE_KTV=
+VERSION_SCENE_SHOW=
