--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -11,13 +11,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation project(path: ":scenes:show:aars:SenseArSourceManager")
-//    implementation project(path: ":scenes:show:aars:STMobileJNI")
+    implementation project(path: ":scenes:show:aars:SenseArSourceManager")
+    implementation project(path: ":scenes:show:aars:STMobileJNI")
+    implementation project(path: ":scenes:show:aars:HardwareBuffer")
 //    implementation "com.github.AgoraIO-Community.BeautyAPI:SenseTime:1.0.0.1"
-    implementation project(":lib_sensetime")
-    implementation project(":lib_sensetime_SenseArSourceManager")
-    implementation project(":lib_sensetime_STMobileJNI")
-    implementation project(":lib_sensetime_HardwareBuffer")
 
     implementation project(":common:base")
     implementation project(':common:ui-widget')
