feat: add subspec

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,11 +38,14 @@ def all_pods
   
   pod 'AgoraSyncManager', '~> 2.0.8'
 
-  pod 'sdk', :path => 'sdk.podspec'
-#  pod 'sdk', :path => 'sdk.podspec'
+  pod 'AgoraRtcEngine_iOS', :path => 'libs'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
 #  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.142'
+
+  pod 'AgoraRtmKit2', :path => 'Rtm2'
+  pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
+  pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
 
 
   #ThirdParty
