--- a/iOS/AgoraEntScenarios.xcodeproj/xcshareddata/xcschemes/AgoraEntScenarios.xcscheme
+++ b/iOS/AgoraEntScenarios.xcodeproj/xcshareddata/xcschemes/AgoraEntScenarios.xcscheme
@@ -59,6 +59,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
+      enableGPUValidationMode = "1"
       allowLocationSimulation = "YES">
       <PreActions>
          <ExecutionAction
