optimize fastest open and video profile

--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -7,7 +7,7 @@ plugins {
 if (project.property("AGORA_APP_ID").toString().isEmpty()) {
     throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
 }
-
+def localsdkPath = "3.0.1-sdk"
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -48,6 +48,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs += "${localsdkPath}"
+        }
+    }
 }
 
 dependencies {
@@ -78,6 +84,7 @@ dependencies {
 
 
 //    api rootProject.ext.deps.rtm
-    api rootProject.ext.deps.rtc
+    //api rootProject.ext.deps.rtc
+    api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
     api rootProject.ext.deps.ok2curl
 }
