fix: update podspec

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,7 +38,7 @@ def all_pods
   
   pod 'AgoraSyncManager', '~> 2.0.8'
 
-  pod 'AgoraRtcEngine_iOS', :path => 'libs'
+  pod 'AgoraRtcEngine_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
 #  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.142'
