--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -44,6 +44,7 @@ def all_pods
 # pod 'AgoraRtcEngine_Special_iOS', '4.0.0.133'
 #  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.142'
 
+  pod 'VideoLoaderAPI', :path => 'AgoraEntScenarios/Common/API/VideoLoaderAPI'
 
   #ThirdParty
   pod 'HWWeakTimer', '1.0'
