--- a/Android/scenes/ktv_relay/build.gradle
+++ b/Android/scenes/ktv_relay/build.gradle
@@ -1,11 +1,13 @@
 ext { ktv_is_modular = false }
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
+final def VERSION_SCENE_SING_RELAY = "3.5.0"
 android {
     defaultConfig {
         if(isModular()){
             applicationId "io.agora.scenes.ktv.singrelay"
         }
+        buildConfigField "String", "VERSION", "\"${VERSION_SCENE_SING_RELAY}\""
     }
 }
 
