--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -84,7 +84,6 @@ dependencies {
 
 
 //    api rootProject.ext.deps.rtm
-    //api rootProject.ext.deps.rtc
-    api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
+    api rootProject.ext.deps.rtc
     api rootProject.ext.deps.ok2curl
 }
