--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -43,5 +43,10 @@ include ':scenes:show:aars:SenseArSourceManager'
 include ':scenes:show:aars:STMobileJNI'
 include ':scenes:show:aars:HardwareBuffer'
 
+/*
+ * 1V1私密房
+ */
+include ':scenes:pure1v1'
+
 
 
