--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -4,7 +4,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 android {
     defaultConfig {
         applicationId "io.agora.AgoraVoice"
-        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a'//, 'arm64-v8a'//, 'x86', 'x86-64'
+        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a' //, 'x86', 'x86-64'
     }
 
     packagingOptions {
