update sdk to 4.1.1.13

--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -8,7 +8,7 @@ if (project.property("AGORA_APP_ID").toString().isEmpty()) {
     throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
 }
 
-def localsdkPath = "3.0.1-sdk"
+//def localsdkPath = "3.0.1-sdk"
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -50,11 +50,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    sourceSets {
-        main {
-            jniLibs.srcDirs += "${localsdkPath}"
-        }
-    }
+//    sourceSets {
+//        main {
+//            jniLibs.srcDirs += "${localsdkPath}"
+//        }
+//    }
 }
 
 dependencies {
@@ -85,7 +85,7 @@ dependencies {
 
 
 //    api rootProject.ext.deps.rtm
-//    api rootProject.ext.deps.rtc
-    api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
+    api rootProject.ext.deps.rtc
+    //api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
     api rootProject.ext.deps.ok2curl
 }
