--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -4,8 +4,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
-if (project.property("AGORA_APP_ID").toString().isEmpty() ||
-        project.property("AGORA_APP_CERTIFICATE").toString().isEmpty()) {
+if (project.property("AGORA_APP_ID").toString().isEmpty()) {
     throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
 }
 
@@ -20,7 +19,7 @@ final def VERSION_SCENE_VOICE = properties.getProperty("VERSION_SCENE_VOICE")
 final def VERSION_SCENE_SPATIAL_VOICE = properties.getProperty("VERSION_SCENE_SPATIAL_VOICE")
 final def VERSION_SCENE_KTV = properties.getProperty("VERSION_SCENE_KTV")
 final def VERSION_SCENE_SHOW = properties.getProperty("VERSION_SCENE_SHOW")
-//def localsdkPath = "3.3.0-sdk"
+def localsdkPath = "3.3.0-sdk"
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -72,11 +71,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-//    sourceSets {
-//        main {
-//            jniLibs.srcDirs += "${localsdkPath}"
-//        }
-//    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs += "${localsdkPath}"
+        }
+    }
 }
 
 dependencies {
@@ -107,7 +106,7 @@ dependencies {
 
 
     api rootProject.ext.deps.rtm
-    api rootProject.ext.deps.rtc
-    //api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
+    //api rootProject.ext.deps.rtc
+    api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
     api rootProject.ext.deps.ok2curl
 }
