--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -11,7 +11,7 @@ APP_VERSION_NAME=3.3.0
 
 #----------- Server Host Config --------------
 SERVER_HOST=https://gateway-fulldemo.agoralab.co/
-TOOLBOX_SERVER_HOST=https://toolbox.bj2.agoralab.co
+TOOLBOX_SERVER_HOST=https://service.agora.io/toolbox
 
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
