--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -21,27 +21,27 @@ include ':common:ui-widget'
 /*
  * 在线K歌房
  */
-include ':scenes:ktv'
+//include ':scenes:ktv'
 
 /*
  * 语聊房
  */
-include ':scenes:voice'
-include ':scenes:voice:common'
+//include ':scenes:voice'
+//include ':scenes:voice:common'
 
 /*
  * 空间音频语聊房
  */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
 
 /*
  * 秀场直播
  */
-include ':scenes:show'
-include ':scenes:show:aars:SenseArSourceManager'
-include ':scenes:show:aars:STMobileJNI'
-include ':scenes:show:aars:HardwareBuffer'
+//include ':scenes:show'
+//include ':scenes:show:aars:SenseArSourceManager'
+//include ':scenes:show:aars:STMobileJNI'
+//include ':scenes:show:aars:HardwareBuffer'
 
 /*
  * 1V1私密房
