--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -1,14 +1,14 @@
 ext {
-    onetoone_is_modular = false
+    private1v1_is_modular = false
 }
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 apply plugin: 'org.jetbrains.kotlin.android'
 
-final def VERSION_SCENE_VOICE = "3.6.0"
+final def VERSION_SCENE_PRIVATE1V1 = "3.6.0"
 android {
     defaultConfig {
-        if(onetoone_is_modular){
-            applicationId "io.agora.scenes.onetoone"
+        if(private1v1_is_modular){
+            applicationId "io.agora.private1v1"
             buildConfigField "Boolean", "is_modular", "${true}"
         }else {
             buildConfigField "Boolean", "is_modular", "${false}"
@@ -19,16 +19,13 @@ android {
             abiFilters 'arm64-v8a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
 
-        buildConfigField "String", "VERSION", "\"${VERSION_SCENE_VOICE}\""
-        buildConfigField "String", "IM_APP_KEY", "\"${IM_APP_KEY}\""
-        buildConfigField "String", "IM_APP_CLIENT_ID", "\"${IM_APP_CLIENT_ID}\""
-        buildConfigField "String", "IM_APP_CLIENT_SECRET", "\"${IM_APP_CLIENT_SECRET}\""
+        buildConfigField "String", "VERSION", "\"${VERSION_SCENE_PRIVATE1V1}\""
     }
     sourceSets {
         main {
             jniLibs.srcDirs = ['src/main/jniLibs']
             // 独立调试与集成调试时使用不同的 AndroidManifest.xml 文件
-            if (onetoone_is_modular) {
+            if (private1v1_is_modular) {
                 manifest.srcFile 'src/main/moduleManifest/AndroidManifest.xml'
             } else {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
