[Android]add create room logic

--- a/Android/scenes/showTo1v1/src/main/AndroidManifest.xml
+++ b/Android/scenes/showTo1v1/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/def_theme" />
+
+        <activity
+            android:name=".ui.RoomCreateActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/def_theme" />
+
+        <activity
+            android:name=".ui.RoomDetailActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/def_theme" />
     </application>
 
 </manifest>
