--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -18,22 +18,22 @@ include ':app'
 include ':common:base'
 include ':common:ui-widget'
 
-/*
- * 在线K歌房
- */
-include ':scenes:ktv'
-
-/*
- * 语聊房
- */
-include ':scenes:voice'
-include ':scenes:voice:common'
-
-/*
- * 空间音频语聊房
- */
-include ':scenes:voice_spatial'
-include ':scenes:voice_spatial:common'
+///*
+// * 在线K歌房
+// */
+//include ':scenes:ktv'
+//
+///*
+// * 语聊房
+// */
+//include ':scenes:voice'
+//include ':scenes:voice:common'
+//
+///*
+// * 空间音频语聊房
+// */
+//include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial:common'
 
 /*
  * 秀场直播
